# dns-server

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: ci.yml
include/: config_loader.h  simple_dns_server.h
src/: config_loader.cpp  main.cpp  simple_dns_server.cpp
